# gid

./: README.md  main.py  pyproject.toml
src/gid/: __init__.py  __main__.py  argparse.py  cli.py  decoder.py  parser.py  utils.py
tests/: index  test_funcs.py
